UPDATE: * Update parent & data-*         * Update to Java 17 with features migration